--- a/odin-signup-form.css
+++ b/odin-signup-form.css
@@ -11,6 +11,14 @@ body {
 
     display: flex;
     flex-direction: row;
+    justify-content: center;
+    height: 100vh; /* Might need to change this? */
+}
+
+.form-row input:invalid {
+    border: 1px solid #D55C5F;
+    color: #D55C5F;
+    box-shadow: none;
 }
 
 .form-row button {
@@ -22,4 +30,3 @@ body {
     border-radius: 3px;
     padding: 20px 80px;
 }
-/* Viewport height on the body or to match the height of the picture */
