Modify formatting of inputs in form section
Moved the labels for each part of the form on top of their respective
inputs per the project instructions. Form section now takes up 80% of
the entire page and even stretches it beyond the viewport a bit,
leaving a scrollbar in it's wake. Have an idea to fix this in the HTML
itself in a future update.

--- a/odin-signup-form.css
+++ b/odin-signup-form.css
@@ -58,11 +58,14 @@ section > div {
     gap: 8px;
 }
 
-/* Might replace with h1 but would need to restyle the other p's inside the form & at the bottom
-p {
-  font-size: 48px;
-  font-weight: 800;
-} */
+/* This gets the labels above the input boxes but widens the entire height of the page (beyond 100%). See HTML form section for more. */
+label, input {
+    display: block;
+    padding: 0;
+    margin: 0;
+    width: 30%;
+    height: 25px;
+}
 
 .form-row input {
     border: 1px solid #E5E7EB;
