--- a/odin-signup-form.css
+++ b/odin-signup-form.css
@@ -26,7 +26,7 @@ body {
     color: black;
 }
 
-/* We can target each part of the form with align-self */
+/* We can target each part of the form with align-self. Might need to erase form styling entirely (see HTML notes) */
 form {
     display: flex;
     flex-direction: column; /* Need more than this */
@@ -52,10 +52,20 @@ section > p {
     margin-bottom: 20px;
 }
 
+/* Flexbox the 3 new sections with row. Possibly wrap or flex-flow as well? */
+
 section > div {
-    flex-wrap: wrap;
+    flex-flow: column wrap;
     padding: 30px 0 30px;
     gap: 8px;
+}
+
+.section-1,
+.section-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    gap: 2rem;
 }
 
 label, input {
@@ -94,6 +104,7 @@ label, input {
     box-shadow: 5px 4px 4px #c7c9cc;
 }
 
+/* Choose between either this or "section > p" above? Do we need both? */
 form > p {
     color: black;
     margin: 2rem;
