--- a/odin-signup-form.css
+++ b/odin-signup-form.css
@@ -52,10 +52,17 @@ section > p {
     margin-bottom: 20px;
 }
 
-/* Flexbox the 3 new sections with row. Possibly wrap or flex-flow as well? */
-
 section > div {
-    flex-flow: column wrap;
+    display: flex;
+    justify-content: space-evenly;
+    margin-left: -38%;
+    padding: 30px 0;
+    gap: 1rem;
+}
+
+/* Old code
+section > div {
+    flex-flow: row wrap;
     padding: 30px 0 30px;
     gap: 8px;
 }
@@ -66,19 +73,21 @@ section > div {
     flex-direction: column;
     justify-content: space-around;
     gap: 2rem;
-}
+} */
 
 label, input {
     display: block;
-    padding: 0; /* POSSIBLY increase this if height is 0 */
-    margin: 0;
-    width: 30%;
+    padding: 0;
+    margin: 10px 0;
+    width: 120%;
     height: auto;
 }
 
 .form-row input {
     border: 1px solid #E5E7EB;
+    border-radius: 5px;
     box-shadow: none;
+    padding: 5px;
 }
 
 .form-row input:focus {
