--- a/odin-signup-form.css
+++ b/odin-signup-form.css
@@ -143,3 +143,14 @@ form > p {
 a {
     color: #596D48;
 }
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    margin: 0 0 1rem 10%;
+    color: #eee;
+}
+
+.footer > a {
+    color: #eee;
+}
